# ObjectDetectionCoprocessor

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  a.py  build.gradle  build_trt.sh  export_trt.sh  inference.sh  reefscape.engine  settings.gradle
.github/workflows/: docker-ci.yml
data/: reefscape-labels.txt
deploy/: export_detection.py  export_segmentation.py  inspect_model.py  requirements.txt
docs/: ARCHITECTURE.md  COMPILE_TIME_BACKEND.md  QUICKSTART.md  backends.md  export.md  glossary.md
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp  rfdetr_inference.cpp  rfdetr_inference.hpp
src/backends/: inference_backend.cpp  inference_backend.hpp  onnx_runtime_backend.cpp  onnx_runtime_backend.hpp  tensorrt_backend.cpp  tensorrt_backend.hpp
tests/integration/: integration_test_rfdetr_inference.cpp
tests/unit/: test_rfdetr_inference.cpp
